--- a/deno.json
+++ b/deno.json
@@ -2,13 +2,17 @@
   "tasks": {
     "start": "deno run -A --watch server/main.ts",
     "dev:client": "cd client && npm run dev",
-    "build:client": "cd client && npm run build"
+    "build:client": "cd client && npm run build",
+    "migrate:logs": "deno run -A server/migrate-logs.ts",
+    "cleanup": "deno run -A server/cleanup.ts",
+    "reset": "deno run -A server/cleanup.ts --reset"
   },
   "imports": {
     "hono": "jsr:@hono/hono@^4.0.0",
     "@std/fs": "jsr:@std/fs@^0.218.0",
     "@std/path": "jsr:@std/path@^0.218.0",
     "@std/assert": "jsr:@std/assert@^0.218.0",
+    "@db/sqlite": "jsr:@db/sqlite@^0.12",
     "cron-parser": "npm:cron-parser@^4.9.0",
     "uuid": "npm:uuid@^13.0.0"
   },
