--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     container_name: homeworkci-server
     restart: unless-stopped
     environment:
-      - PORT=${PORT:-8000}
+      - PORT=${PORT:-8008}
       - HOST=${HOST:-0.0.0.0}
       - PIPELINES_DIR=/app/pipelines
       - MODULES_DIR=/app/modules
@@ -34,7 +34,13 @@ services:
     # volumes:
     #   - /var/run/docker.sock:/var/run/docker.sock:ro
     healthcheck:
-      test: ["CMD", "deno", "eval", "const r = await fetch('http://localhost:8000/api/health').catch(() => null); Deno.exit(r?.ok ? 0 : 1);"]
+      test:
+        [
+          "CMD",
+          "deno",
+          "eval",
+          "const r = await fetch('http://localhost:8008/api/health').catch(() => null); Deno.exit(r?.ok ? 0 : 1);",
+        ]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -57,7 +63,15 @@ services:
     networks:
       - homeworkci-network
     healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:80/"]
+      test:
+        [
+          "CMD",
+          "wget",
+          "--no-verbose",
+          "--tries=1",
+          "--spider",
+          "http://localhost:80/",
+        ]
       interval: 30s
       timeout: 5s
       retries: 3
@@ -78,4 +92,3 @@ volumes:
     driver: local
   homeworkci-tmp:
     driver: local
-
