--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -2,7 +2,7 @@
 # Serves React SPA and proxies API requests to backend
 
 upstream backend {
-    server server:8000;
+    server server:8008;
     keepalive 32;
 }
 
@@ -39,6 +39,27 @@ server {
         try_files $uri $uri/ /index.html;
     }
     
+    # WebSocket proxy (must be before /api/ to match first)
+    location = /api/ws {
+        proxy_pass http://backend/api/ws;
+        proxy_http_version 1.1;
+        
+        # WebSocket upgrade headers - REQUIRED
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        
+        # WebSocket specific timeouts (long-lived connection)
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 86400s;
+        proxy_read_timeout 86400s;
+        
+        # Disable buffering for real-time
+        proxy_buffering off;
+    }
+    
     # API proxy
     location /api/ {
         proxy_pass http://backend/api/;
@@ -53,29 +74,11 @@ server {
         # Timeouts
         proxy_connect_timeout 60s;
         proxy_send_timeout 60s;
-        proxy_read_timeout 300s; # Long timeout for pipeline runs
+        proxy_read_timeout 300s;
         
-        # Buffering
+        # Disable buffering for SSE/streaming
         proxy_buffering off;
         proxy_request_buffering off;
-    }
-    
-    # WebSocket proxy
-    location /api/ws {
-        proxy_pass http://backend/api/ws;
-        proxy_http_version 1.1;
-        
-        # WebSocket upgrade headers
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        
-        # WebSocket specific timeouts
-        proxy_connect_timeout 7d;
-        proxy_send_timeout 7d;
-        proxy_read_timeout 7d;
     }
     
     # Health check endpoint
@@ -85,4 +88,3 @@ server {
         add_header Content-Type text/plain;
     }
 }
-
