feat: implement update management system for automatic and manual updates
- Added new environment variables for GitHub repository configuration and auto-update functionality in docker-compose and env.example files.
- Introduced API routes for checking and applying updates, including syncing default files after updates.
- Implemented update checking and application logic in the client-side Settings page, allowing users to manage updates through the UI.
- Created utility functions for interacting with GitHub to check for the latest releases and handle version comparisons.
- Developed a sync utility to intelligently update default files while preserving user modifications.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,10 @@ services:
       - DOCKER_CPU_LIMIT=${DOCKER_CPU_LIMIT:-1}
       - DOCKER_NETWORK_DEFAULT=${DOCKER_NETWORK_DEFAULT:-bridge}
       - DOCKER_TIMEOUT_MS=${DOCKER_TIMEOUT_MS:-600000}
+      # Update settings
+      - GITHUB_REPO=${GITHUB_REPO:-}
+      - AUTO_UPDATE_ENABLED=${AUTO_UPDATE_ENABLED:-false}
+      - REPO_PATH=${REPO_PATH:-}
     volumes:
       # Persistent data
       - homeworkci-data:/app/data
@@ -37,6 +41,8 @@ services:
       # Temporary sandbox - bind mount for Docker-in-Docker access
       # Docker containers spawned from server need host path access
       - ${SANDBOX_HOST_PATH:-/tmp/homeworkci}:/app/tmp
+      # Repository mount for auto-updates (optional, uncomment if REPO_PATH is set)
+      # - ${REPO_PATH}:/app/repo:ro
       # Docker socket for Docker-in-Docker (required for docker module)
       - /var/run/docker.sock:/var/run/docker.sock
     # Run as root for Docker socket access (required for docker module)
