--- a/env.example
+++ b/env.example
@@ -48,3 +48,18 @@ DOCKER_NETWORK_DEFAULT=bridge
 # Container execution timeout (ms)
 DOCKER_TIMEOUT_MS=600000
 
+# === Updates ===
+# GitHub repository for version checking (format: owner/repo)
+# Example: GITHUB_REPO=username/homeworkci
+GITHUB_REPO=
+# GITHUB_REPO=denyzhirkov/homeworkci
+
+# Enable automatic updates (requires REPO_PATH to be set)
+# When enabled, updates can be applied directly from the UI
+AUTO_UPDATE_ENABLED=false
+
+# Path to repository on host (for automatic updates)
+# This path will be mounted as /app/repo in the container
+# Example: REPO_PATH=/opt/homeworkci
+# Leave empty to disable automatic updates
+REPO_PATH=
