feat: add docker_remote module for remote Docker operations
- Introduced a new module, docker_remote, allowing users to pull and run Docker images on remote hosts via SSH.
- Updated documentation to include details about the new module and its parameters.
- Modified existing modules and configuration files to integrate docker_remote into the system.
- Enhanced the UI to support the new module in the pipeline configuration.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     build:
       context: .
       dockerfile: docker/server.Dockerfile
-    container_name: homeworkci-server
+    container_name: homeworkci
     restart: unless-stopped
     ports:
       - "${CLIENT_PORT:-80}:8008"
